[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/general/SearchItem.gd" type="Script" id=1]

[node name="SearchItem" type="MarginContainer"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 43.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 68.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 68.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 68.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 68.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
